# ifttt-lint-rs

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  action.yml  install.sh  justfile  release-please-config.json  renovate.json  sonar-project.properties
.githooks/: commit-msg  pre-commit
.github/workflows/: bench.yml  build.yml  ci.yml  commitlint.yml  ifttt-lint-reusable.yml  lint-ifchange.yml  post-merge.yml  release-binaries.yml  release-please.yml  renovate.yml  sonarqube.yml  test.yml
bench/: data.js
benches/: check_bench.rs  latency_16kloc_bench.rs  lint_bench.rs  scan_bench.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DIRECTIVES.md  RELEASE.md  VERSIONING.md
examples/: README.md
examples/hooks/: pre-commit.ifchange.sh  pre-commit.ifttt-lint.sh
examples/workflows/: ifchange.yml  ifttt-lint-reusable.yml  ifttt-lint-use-reusable.yml  ifttt-lint.yml
npm/: install.js  package.json  run.js
npm/scripts/: generate-platforms.mjs
npm/test/: e2e-resolution.test.mjs  resolve-binary.test.mjs
pypi/: pyproject.toml
pypi/ifchange/: __init__.py  __main__.py  install.py
pypi/lint_ifchange/: __init__.py  __main__.py  install.py
scripts/: pre_commit_ifchange.py  setup.sh
scripts/perf/: bench_rs_vs_ts.sh  compare_ts_vs_rust.sh  e2e_16kloc_latency.sh
src/: app.rs  cli.rs  diff.rs  lib.rs  main.rs  model.rs
src/comment/: extract.rs  extractor.rs  mod.rs
src/diff/: mod.rs  parser.rs
src/directive/: error.rs  mod.rs  parse.rs  patterns.rs  validate.rs
src/engine/: ignore.rs  index.rs  lint.rs  mod.rs  path_utils.rs  resolve.rs  types.rs
src/model/: diff.rs  directive.rs  mod.rs  outcome.rs  range.rs
tests/: absolute_paths.rs  cli.rs  integration_tests.rs  lint.rs  scan.rs
tests/common/: mod.rs
