[package]
name = "ifchange"
version = "0.1.0"
edition = "2021"
description = "A fast linter for enforcing conditional change directives in source code"
license = "MIT"
repository = "https://github.com/slnc/ifchange"
homepage = "https://github.com/slnc/ifchange"
keywords = ["lint", "code-review", "ci", "diff", "ifchange"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.74"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
rayon = "1"
ignore = "0.4"
globset = "0.4"
thiserror = "2"
is-terminal = "0.4.17"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
dunce = "1.0.5"
tempfile = "3"

[[bench]]
name = "lint_bench"
harness = false

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "latency_16kloc_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
